# IPBM

./: .gitignore  LIZA.txt  README.md  build.sh  build_brom.sh  build_debug.sh  build_release.sh  lisa.txt
data/: ROMS_Laptev_Sea.nc  fabm.yaml  fabm_brom.yaml  fabm_ersem.yaml  fabm_ersem_brom.yaml  fabm_with_bottom.yaml  ice.nc
include/: brom.h  ipbm.h  parameters.h
src/: '  CMakeLists.txt  diff_mod.F90  ice_host.F90  ice_mod.F90  input.F90  input_mod.F90  item_mod.F90  list_mod.F90  main.F90  output_mod.F90  sed_mod.F90  transport.F90  types.F90  types_mod.F90  variables_mod.F90
src/cmake/Modules/: FindNetCDF.cmake
